--- a/frontend/neura/src/app/globals.css
+++ b/frontend/neura/src/app/globals.css
@@ -129,3 +129,35 @@
     cursor: pointer;
   }
 }
+
+::-webkit-scrollbar {
+  width: 5px; /* Width of the vertical scrollbar */
+  height: 5px; /* Height of the horizontal scrollbar */
+  display: none;
+}
+
+.glass-effect {
+  background: rgba(0, 0, 0, 0.2);
+  background: repeating-radial-gradient(
+    circle at 50% 50%,
+    rgb(255 255 255 / 0),
+    rgba(255, 255, 255, 0.2) 10px,
+    rgb(255 255 255) 31px
+  );
+  filter: url(#fractal-noise-glass);
+  background-size: 6px 6px;
+  backdrop-filter: blur(0px);
+}
+
+@keyframes slide-up {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+video {
+  user-select: none;
+}
